--- a/jade/index.jade
+++ b/jade/index.jade
@@ -10,8 +10,10 @@ html(lang='en')
     title audri.us
 
   body
-    div.main-wrapper
+    div.vertical-wrapper
       header
         h1 AUDRI.US
 
       div.main-content
+
+        ul.links
