--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -16,3 +16,6 @@
 }
 
 @include font-face('Yanone Kaffeesatz', '../fonts/YanoneKaffeesatz-Bold', true, normal, bold);
+
+$heading-size: 160px;
+$heading-line-height: 100px;
