--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -1,21 +1,16 @@
-@mixin font-face($font-name, $file, $eot: false, $style: normal, $weight: normal) {
+@mixin font-face($font-name, $file, $style: normal, $weight: normal) {
     @font-face {
         font-family: '#{$font-name}';
         font-style: $style;
         font-weight: $weight;
-        @if $eot {
-          src: local(#{$font-name}),
-               url(#{$file}.eot) format('eot'),
-               url(#{$file}.ttf) format('ttf');
-        }
-        @else {
-          src: local(#{$font-name}),
-               url(#{$file}.ttf) format('ttf');
-        }
+        src: local(#{$font-name}),
+             url(#{$file}.ttf) format('truetype');
     }
 }
 
-@include font-face('Yanone Kaffeesatz', '../fonts/YanoneKaffeesatz-Bold', true, normal, bold);
+@include font-face('Yanone Kaffeesatz', '../fonts/YanoneKaffeesatz/YanoneKaffeesatz-Bold', normal, bold);
 
 $heading-size: 160px;
 $heading-line-height: 100px;
+
+$heading-size-smaller: 72px;
