--- a/jade/index.jade
+++ b/jade/index.jade
@@ -17,3 +17,7 @@ html(lang='en')
       div.main-content
 
         ul.links
+          li
+            a(href='http://github.com/audriuslubys')
+              img(src='img/octocat.png', alt='Github Octocat')
+              span GitHub Profile
