--- a/scss/_breakpoints.scss
+++ b/scss/_breakpoints.scss
@@ -2,19 +2,20 @@
   @if $type == smaller {
     @media only screen
     and (min-device-width: 320px)
-    and (max-device-width: 1024px) {
+    and (max-width: 1024px) {
       @content;
     }
   }
   @else if $type == normal {
     @media only screen
-    and (min-device-width: 1025px)
+    and (min-width: 1024px)
     and (min-height: 500px) {
       @content;
     }
   }
   @else if $type == short {
     @media only screen
+    and (min-width: 1024px)
     and (max-height: 500px) {
       @content;
     }
