--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -23,6 +23,8 @@ header {
   }
 
   .main-content {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     height: $height;
     padding: $padding-size;
@@ -43,6 +45,8 @@ header {
   }
 
   .main-content {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
     height: $height;
     padding: $padding-size;
@@ -56,6 +60,8 @@ header {
       @include clearfix;
 
       border-radius: 60px 0 0 60px / 60px 0 0 60px;
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
       box-sizing: border-box;
       height: 120px;
       margin: 0 0 20px 0;
@@ -89,6 +95,8 @@ header {
     @include clearfix;
 
     li {
+      -moz-box-sizing: border-box;
+      -webkit-box-sizing: border-box;
       box-sizing: border-box;
       border-radius: 60px;
       height: 120px;
