Disable text selection on title

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -12,7 +12,7 @@ html(lang='en')
   body
     div.vertical-wrapper
       header
-        h1= title
+        h1.title= title
 
       div.main-content
 
