--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -15,6 +15,14 @@ h1 {
   padding: 0;
 }
 
+.title {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+}
+
 @include media(normal) {
 
   header {
