--- a/jade/index.jade
+++ b/jade/index.jade
@@ -9,16 +9,12 @@ html(lang='en')
 
     title= title
 
-  body
-    div.vertical-wrapper
-      header
-        h1.title= title
-
-      div.main-content
-
-        ul.links
-          each link in profileLinks
-            li
-              a(href=link.href)
-                img(src=link.image.src, alt=link.image.altText)
-                span= link.title
+  body.homepage
+    section.profile
+      span.yours-truly= 'AUDRIUS LUBYS'
+      ul.profile-links
+        each link in profileLinks
+          li.profile-links__link
+            a(href=link.href)
+              img(src=link.image.src, alt=link.image.altText)
+      
