--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,7 +1,3 @@
-// background color
-$color-main-bg: #1f2434;
-
-// foreground color
-$color-main-fg: #3ee6a1;
-
-$color-accent-fg: #fff;
+$background-color: #38bf8b;
+$foreground-color: #573030;
+$accent-color: #ffffff;
