--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -4,11 +4,11 @@ h1,
 img,
 ul,
 li {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
 }
 
 ul,
@@ -16,14 +16,12 @@ li {
   list-style: none;
 }
 
-header,
-section,
-article {
-    display: block;
+section {
+  display: block;
 }
 
 html,
 body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
