--- a/scss/blocks/_profile.scss
+++ b/scss/blocks/_profile.scss
@@ -8,10 +8,18 @@ $spacing-vertical: 0.3rem;
   height: 100%;
   width: 100%;
 
+  @include breakpoint(phone) {
+    flex-direction: column;
+  }
+
   &__person {
     color: $foreground-color;
     font-size: 1.3rem;
     margin: 0 $spacing-vertical;
+
+    @include breakpoint(phone) {
+      font-size: 2rem;
+    }
   }
 }
 
