--- a/scss/blocks/_profileLinkList.scss
+++ b/scss/blocks/_profileLinkList.scss
@@ -1,4 +1,5 @@
 $profile-link-icon-size: 1.4rem;
+$profile-link-icon-size-phone: 2rem;
 
 .profile-links {
   &__link {
@@ -6,6 +7,11 @@ $profile-link-icon-size: 1.4rem;
     margin: 0 $spacing-vertical;
     height: $profile-link-icon-size;
     width: $profile-link-icon-size;
+
+    @include breakpoint(phone) {
+      height: $profile-link-icon-size-phone;
+      width: $profile-link-icon-size-phone;
+    }
   }
 
   &__link img {
