--- a/jade/index.jade
+++ b/jade/index.jade
@@ -11,7 +11,7 @@ html(lang='en')
 
   body.homepage
     section.profile
-      span.yours-truly= 'AUDRIUS LUBYS'
+      span.yours-truly= person
       ul.profile-links
         each link in profileLinks
           li.profile-links__link
