--- a/jade/index.jade
+++ b/jade/index.jade
@@ -17,12 +17,12 @@ html(lang='en')
           li.profile-links__link
             a(href=link.href)
               img(src=link.image.src, alt=link.image.altText)
-  script(language='text/javascript').
+  script(language='text/javascript').<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-71860939-1', 'auto');
+    ga('create', 'UA-71860939-2', 'auto');
     ga('send', 'pageview');
       
