--- a/app/scss/blocks/_profileLinkList.scss
+++ b/app/scss/blocks/_profileLinkList.scss
@@ -1,20 +1,37 @@
-$profile-link-icon-size: 1.4rem;
-$profile-link-icon-size-phone: 2rem;
+$profile-link-icon-size: 24px;
+$profile-link-icon-size-phone: 30px;
 
-.profile-links {
-  &__link {
-    float: left;
-    margin: 0 $spacing-vertical;
-    height: $profile-link-icon-size;
-    width: $profile-link-icon-size;
+$profile-link-round-icon-size: 22px;
+$profile-link-round-icon-size-phone: 28px;
+
+.profile-links__item {
+  float: left;
+  margin: 0 $spacing-vertical;
+  font-size: 0;
+}
+
+.profile-links__link {
+  display: inline-block;
+  width: $profile-link-icon-size;
+  height: $profile-link-icon-size;
+
+  @include breakpoint(phone) {
+    width: $profile-link-icon-size-phone;
+    height: $profile-link-icon-size-phone;
+  }
+
+  &--round {
+    width: $profile-link-round-icon-size;
+    height: $profile-link-round-icon-size;
 
     @include breakpoint(phone) {
-      height: $profile-link-icon-size-phone;
-      width: $profile-link-icon-size-phone;
+      width: $profile-link-round-icon-size-phone;
+      height: $profile-link-round-icon-size-phone;
     }
   }
 
-  &__link img {
+  & img {
+    width: 100%;
     height: 100%;
   }
 }
