--- a/app/index.pug
+++ b/app/index.pug
@@ -5,18 +5,18 @@ html(lang='en')
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
 
-    link(rel='stylesheet', href='css/style.min.css')
+    link(rel='stylesheet', href='style.min.css')
 
-    title= title
+    title Audrius Lubys
 
-  body.homepage
-    section.profile
-      span.yours-truly= person
-      ul.profile-links
-        each link in profileLinks
-          li.profile-links__item
-            a(href=link.href, class=['profile-links__link', link.class])
-              img(src=link.image.src, alt=link.image.altText)
+  body
+    section.homepage
+      div.person Audrius Lubys
+      ul.links
+        each link in links
+          li
+            a(href=link.href, target='_blank', class='link')
+              img(src=link.image, alt=link.title)
 
   script(type='text/javascript').
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -24,5 +24,5 @@ html(lang='en')
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', '#{analyticsId}', 'auto');
+    ga('create', '#{env.GA_ID}', 'auto');
     ga('send', 'pageview');
