--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,10 +1,68 @@
-@import 'mixins/breakpoints';
-@import 'mixins/fontFace';
-
+@import 'breakpoints';
 @import 'reset';
-@import 'colors';
 @import 'font';
 
-@import 'blocks/homepage';
-@import 'blocks/profile';
-@import 'blocks/profileLinkList';
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+body {
+  background-color: #38bf8b;
+  color: #424b4e;
+}
+
+.homepage {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  animation: fadeIn 1.5s;
+
+  @include breakpoint(phone) {
+    flex-direction: column;
+  }
+}
+
+.person {
+  font-size: 1.3rem;
+  text-transform: uppercase;
+
+  @include breakpoint(phone) {
+    font-size: 1.8rem;
+  }
+}
+
+.links {
+  display: flex;
+  flex-flow: row nowrap;
+  margin: 15px 5px 10px;
+
+  @include breakpoint(phone) {
+    margin: 10px;
+  }
+}
+
+.link {
+  display: inline-block;
+  width: 22px;
+  height: 22px;
+  margin: 0 5px;
+  transition: transform .3s ease;
+
+  &:hover {
+    transform: scale(1.1);
+  }
+
+  @include breakpoint(phone) {
+    width: 32px;
+    height: 32px;
+  }
+
+  & img {
+    width: 100%;
+    height: 100%;
+  }
+}
