--- a/app/index.pug
+++ b/app/index.pug
@@ -13,10 +13,15 @@ html(lang='en')
     section.homepage
       div.person Audrius Lubys
       ul.links
-        each link in links
-          li
-            a(href=link.href, target='_blank', class='link')
-              img(src=link.image, alt=link.title)
+        li
+          a(href='mailto:audrius.lubys@gmail.com', target='_blank', rel='noopener', class='link')
+            img(src='img/at.svg', alt='Mail')
+        li
+          a(href='https://github.com/audriuslubys', target='_blank', rel='noopener', class='link')
+            img(src='img/octocat.svg', alt='GitHub')
+        li
+          a(href='https://lt.linkedin.com/in/audriuslubys', target='_blank', rel='noopener', class='link')
+            img(src='img/in.svg', alt='LinkedIn')
 
   script(type='text/javascript').
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
