--- a/src/index.pug
+++ b/src/index.pug
@@ -4,8 +4,9 @@ html(lang='en')
   head
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-
-    link(rel='stylesheet', href='style.min.css')
+    
+    style
+      include:sass(outputStyle="compressed") scss/main.scss
 
     title Audrius Lubys
 
