Move to gh pages

--- a/src/scss/_font.scss
+++ b/src/scss/_font.scss
@@ -9,7 +9,7 @@
   }
 }
 
-@include font-face('Antonio', '../fonts/Antonio/Antonio-Regular');
+@include font-face('Antonio', 'fonts/Antonio/Antonio-Regular');
 
 body {
   font-family: 'Antonio', 'Arial', sans-serif;
