add custom build script

--- a/src/index.pug
+++ b/src/index.pug
@@ -6,7 +6,7 @@ html(lang='en')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     
     style
-      include:sass(outputStyle="compressed") scss/main.scss
+      include:scss(outputStyle="compressed") scss/main.scss
 
     title Audrius Lubys
 
