--- a/src/index.pug
+++ b/src/index.pug
@@ -24,11 +24,12 @@ html(lang='en')
           a(href='https://lt.linkedin.com/in/audriuslubys', target='_blank', rel='noopener', class='link')
             img(src='img/in.svg', alt='LinkedIn')
 
-  script(type='text/javascript').
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  if env.GA_ID
+    script(type='text/javascript').
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', '#{env.GA_ID}', 'auto');
-    ga('send', 'pageview');
+      ga('create', '#{env.GA_ID}', 'auto');
+      ga('send', 'pageview');
