--- a/src/style.css
+++ b/src/style.css
@@ -13,13 +13,21 @@ body {
 }
 
 .root {
-	margin-top: 150px;
+	max-width: 500px;
+	margin: 0 auto;
+	margin-top: min(calc((100vh - 500px) / 2), 150px);
+}
+
+.status {
+	margin: 0 25px;
+	text-align: right;
+	font-size: 48px;
 }
 
 .screen {
+	margin: 0 25px;
 	position: relative;
 	display: block;
-	margin: 0 auto;
 	background: #b0cf42;
 	box-shadow: 0 0 100px 0 rgba(0, 0, 0, 0.1);
 	border-radius: 3px;
@@ -28,12 +36,6 @@ body {
 .canvas {
 	width: 100%;
 	height: 100%;
-}
-
-.status {
-	margin: auto;
-	text-align: right;
-	font-size: 48px;
 }
 
 .end {
