--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,14 @@
 html,
 body {
+	width: 100vw;
+	height: 100vh;
 	margin: 0;
 	background: #b0cf42;
 	font-family: "Micro 5", sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	color: #333333;
+	overflow: hidden;
 }
 
 * {
